--- a/src/style.css
+++ b/src/style.css
@@ -2,8 +2,122 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer components{
-    .text-shadow{
-     text-shadow: 2px 2px #333;
-    }
- }
+@layer components {
+  .text-shadow {
+    text-shadow: 2px 2px #333;
+  }
+
+  .overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #000;
+  }
+
+  .img:hover .overlay{
+    opacity: 0.5;
+  }
+
+  .gallery {
+    padding: 1rem;
+    display: grid;
+    grid-template-columns: repeat(10, 20vw);
+    grid-template-rows: 1fr;
+    grid-column-gap: 1rem;
+    grid-row-gap: 1rem;
+    overflow: scroll;
+    scroll-snap-type: both mandatory;
+    scroll-padding: 1rem;
+  }
+
+  .active {
+    scroll-snap-type: unset;
+  }
+
+  li {
+    scroll-snap-align: center;
+    display: inline-block;
+    border-radius: 3px;
+    font-size: 0;
+  }
+
+  .text-focus-in {
+    -webkit-animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53)
+      both;
+    animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
+  }
+
+  .m-scroll {
+    display: flex;
+    position: relative;
+    width: 100%;
+    height: 25px;
+    margin: auto;
+    overflow: hidden;
+    z-index: 1;
+  }
+
+  .m-scroll__title {
+    position: absolute;
+    top: 0;
+    left: 0;
+    align-items: center;
+    width:100%;
+    height: 100%;
+    white-space: nowrap;
+    transform: scale(2);
+    transition: all 1.5s ease;
+  }
+
+  .m-scroll__title_2 {
+    animation: scrollText 60s infinite linear;
+  }
+
+
+  .m-scroll__title_3 {
+    animation: scrollText 45s infinite linear;
+  }
+
+  .h1 {
+    margin: 0;
+    font-size: 8px;
+    color: rgba(255, 255, 255, 1);
+  }
+}
+
+/*div:hover {
+    animation-play-state: paused;
+  }*/
+@keyframes scrollText {
+  from {
+    transform: translateX(-50%);
+  }
+  to {
+    transform: translateX(600%);
+  }
+}
+
+/*
+ *  STYLE 4
+ */
+
+#style-4::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #f5f5f5;
+}
+
+#style-4::-webkit-scrollbar {
+  width: 10px;
+  background-color: #f5f5f5;
+}
+
+#style-4::-webkit-scrollbar-thumb {
+  background-color: #000000;
+  border: 2px solid #555555;
+}
